updated code added profile based routing hosts

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -121,3 +121,8 @@ jhipster:
 # ===================================================================
 
 # application:
+app:
+  endpoints:
+    customerservice: localhost:8081
+    accountsservice: localhost:8082
+    transactionsservice: localhost:8083
