--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -135,3 +135,8 @@ jhipster:
 # ===================================================================
 
 # application:
+app:
+  endpoints:
+    customerservice: customer-service:8081
+    accountsservice: accounts-service:8082
+    transactionsservice: trnx-service:8083
